--- a/config/database.yml
+++ b/config/database.yml
@@ -8,8 +8,8 @@ default: &default
   adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
-  # username: nimbus
-  # password: deploychan
+  username: nimbus
+  password: d8mNCMEQqAjxpxfBUpIy9hJF01ajBCAV
 
 development:
   <<: *default
