--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ yarn-debug.log*
 /.vs
 .vs
 .vs/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
