--- a/.ebextensions/01_install_packages.config
+++ b/.ebextensions/01_install_packages.config
@@ -8,3 +8,5 @@ commands:
     command: sudo amazon-linux-extras enable postgresql13
   02_postgres_install:
     command: sudo yum install -y postgresql-devel
+  03_postgres_install_another:
+    command: sudo yum install postgresql96 postgresql96-server postgresql96-libs postgresql96-contrib postgresql96-devel
